修复了subject和course关系以及题目库和知识点库关系可重复添加的bug。修改了根据subject查course的接口